k8s/calibre/resources/calibre.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: config
          persistentVolumeClaim:
            claimName: config-volume
      containers:
        - name: calibre
          image: linuxserver/calibre:7.23.0@sha256:6236e60ea9a3df9940803f1e3dcbcddb0dc55f710671f9bc268d6a1c1143f984
          volumeMounts:
            - name: media
              subPath: eBooks
              mountPath: /books
            - name: config
              mountPath: /config
          ports:
            - name: web
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
