k8s/calibre/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://calibre.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: calibre
    gethomepage.dev/group: Media
    gethomepage.dev/icon: calibre
    gethomepage.dev/name: Calibre
    gethomepage.dev/weight: '10'
spec:
  ingressClassName: nginx
  rules:
    - host: calibre.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
